--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ footer {
 }
 
 #apresentacao {
-    background: url('../assets/img/desk-coworking.jpg') no-repeat;
+    background: url('img/desk-coworking.jpg') no-repeat;
     background-position: 75% 75%;
     color: white;
     height: 70%;
@@ -54,7 +54,7 @@ footer {
 }
 
 #inscricao {
-    background:  url('../assets/img/happy-friendsd.jpg') no-repeat;
+    background:  url('img/happy-friendsd.jpg') no-repeat;
     background-size: cover;
     background-position: 75% 60%;
 
